--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "server": "node api/app.js",
+    "client": "npm start"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,6 +14,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongodb": "^3.5.9",
     "morgan": "~1.9.1",
     "multer": "^1.4.2"
   }
